Record search geolocation pre-disclosure metrics earlier

The metrics are meant to record the distribution of geolocation
permissions for the DSE CCTLD origin, but are recorded after the
permissions are checked. This means all metrics recorded are ASK.

BUG=675503

Review-Url: https://codereview.chromium.org/2585153002
Cr-Commit-Position: refs/heads/master@{#439639}

Former-commit-id: 51cb46ec4e347179835637fe59ace00c707ba074